...
                }
            }
        }
    }

    fun validate(state: AddEventUiState): String? {
        if (state.eventName.isBlank()) return "Event Name is required."
        if (state.ticketPrice.isBlank()) return "Ticket Price is required."
        if (state.ticketPrice.toDoubleOrNull() == null) return "Ticket Price must be a properly formatted number."
        if (state.eventType.isBlank()) return "Event Type is required."
        if (state.location.isBlank()) return "Event Location is required."

        // no need to validate syntax since they use the android widgets
...
